--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
+alembic==1.10.3
 anyio==3.6.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
-fastapi==0.95.0
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
+Mako==1.2.4
+MarkupSafe==2.1.2
+psycopg2==2.9.6
 pydantic==1.10.7
 requests==2.28.2
 sniffio==1.3.0
